views absent_contact_index ajusted: contactReason box size

--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -66,6 +66,13 @@
           .contact {
             margin: 20px 5px;
           }
+          .contactReason {
+            @extend .contact;
+            width: 70%;
+          }
+          .contactConfirm {
+            @extend .contact;
+          }
         }
       }
     }
