--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -31,7 +31,7 @@
       .infoArea__AbsentContact__absentContactForm
         .infoArea__AbsentContact__contactsHistory
           .infoArea__AbsentContact__contactsHistory__title
-            受診履歴
+            受信履歴
           .infoArea__AbsentContact__contactsHistory__index
             - @absent_contacts_for_teacher.each do |a|
               .contactHistoryBox
