--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -1,59 +1,82 @@
 .infoArea {
   &__AbsentContact {
-     &__absentContactForm {
-       padding: 30px 30px;
-      &__FormHead {
-        font-size: 20px;
-        padding: 2px;
-        border-bottom: 2px solid black;
-      }
-      &__FormBox {
-        padding: 10px 20px 0 20px;
-        .InputBox {
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          background-color: #eeeeee;
-          padding: 2px 10px;
-          border: 2px solid lightgray;
-          .absentAt {
-            width: 110px;
+    padding: 30px 30px;
+    &__absentContactForm {
+
+    &__FormHead {
+      font-size: 20px;
+      padding: 2px;
+      border-bottom: 2px solid black;
+    }
+    &__FormBox {
+      padding: 10px 20px 0 20px;
+      .InputBox {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: #eeeeee;
+        padding: 2px 10px;
+        border: 2px solid lightgray;
+        .absentAt {
+          width: 110px;
+        }
+        .absentKind {
+          width: 100px;
+        }
+        .absentReason {
+          width: 60%;
+        }
+        .afterContact {
+          width: 142px;
+        }
+        .absentAt,
+        .absentKind,
+        .absentReason,
+        .afterContact {
+          font-size: 12px;
+          margin: 0 15px;
+          .inputAbsentAT,
+          .inputKind,
+          .inputReason,
+          .inputAfterContact {
+            width: 100%;
+            height: 50px;
           }
-          .absentKind {
-            width: 100px;
-          }
-          .absentReason {
-            width: 60%;
-          }
-          .afterContact {
-            width: 142px;
-          }
-          .absentAt,
-          .absentKind,
-          .absentReason,
-          .afterContact {
-            font-size: 12px;
-            margin: 0 15px;
-            .inputAbsentAT,
-            .inputKind,
-            .inputReason,
-            .inputAfterContact {
-              width: 100%;
-              height: 50px;
-            }
-          }
-          .SubmitBtn {
-            width: 100px;
-            text-align: center;
-            .submit-btn {
-              margin-top: 12px;
-            }
+        }
+        .SubmitBtn {
+          width: 100px;
+          text-align: center;
+          .submit-btn {
+            margin-top: 12px;
           }
         }
       }
     }
+    }
     &__contactsHistory {
       margin-top: 40px;
+      &__todayAbsentContactTitle {
+        font-size: 20px;
+        padding: 2px;
+        border-bottom: 2px solid black;
+        margin-bottom: 20px;
+      }
+      &__TodayAbsentContact {
+        display: flex;
+        justify-content: center;
+        .todayAc {
+          padding: 50px 0;
+          margin-bottom: 20px;
+          .todayAcLink {
+            color: black;
+            font-size: 40px;
+            text-decoration: none;
+          }
+          .todayAcLink:hover {
+            border-bottom: 1px solid black;
+          }
+        }
+      }
       &__title {
         font-size: 20px;
         padding: 2px;
