--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -123,7 +123,7 @@ footer {
     }
     &__roomIndex {
       height:calc( 100% - 130px);
-      background-color: #ffffff;
+      background-color: ivory;
       color: black;
       font-weight: bolder;
       padding: 10px 0;
