--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -33,32 +33,44 @@
         .infoArea__AbsentContact__contactsHistory__todayAbsentContactTitle
           本日の連絡
         .infoArea__AbsentContact__contactsHistory__TodayAbsentContact
-          hello new world
-          -# - if @today_absent_contact == nil
+          - if @today_absent_contact_for_teacher == nil
             今日は連絡がありません。
-          -# - else
-            -# - @today_absent_contact.each do |t|
-            -#   .todayAc
-            -#     = link_to room_absent_contact_path(@room, t), class: "todayAcLink" do
-            -#       = t.set_date
+          - else
+            - @today_absent_contact_for_teacher.each do |absentcontact|
+              .AbsentContactBox
+                .contactDate
+                  =absentcontact.set_date
+                .contactName
+                  = absentcontact.user.child_name
+                .contactKind
+                  - if absentcontact.kind == "absent"
+                    欠席
+                  - elsif absentcontact.kind == "latein"
+                    遅刻
+                  - else
+                    早退
+                .contactReason 
+                  = absentcontact.reason
+                .contactConfirm
+                  確認
         .infoArea__AbsentContact__contactsHistory__title
           受信履歴
         .infoArea__AbsentContact__contactsHistory__index
-          - @absent_contacts_for_teacher.each do |a|
-            .contactHistoryBox
-              .contact
-                =a.set_date
-              .contact
-                = a.user.child_name
-              .contact
-                - if a.kind == "absent"
+          - @absent_contacts_for_teacher.each do |absentcontact|
+            .AbsentContactBox
+              .contactDate
+                =absentcontact.set_date
+              .contactName
+                = absentcontact.user.child_name
+              .contactKind
+                - if absentcontact.kind == "absent"
                   欠席
-                - elsif a.kind == "latein"
+                - elsif absentcontact.kind == "latein"
                   遅刻
                 - else
                   早退
               .contactReason 
-                = a.reason
+                = absentcontact.reason
               .contactConfirm
                 確認
   - else
@@ -84,23 +96,50 @@
               .SubmitBtn
                 = f.submit '送信', class: "submit-btn" 
         .infoArea__AbsentContact__contactsHistory
+          .infoArea__AbsentContact__contactsHistory__todayAbsentContactTitle
+            本日の連絡
+          .infoArea__AbsentContact__contactsHistory__TodayAbsentContact
+            - if @today_absent_contact_for_parent == nil
+              今日は連絡がありません。
+            - else
+              - @today_absent_contact_for_parent.each do |absentcontact|
+                .AbsentContactBox
+                  .contactDate
+                    =absentcontact.set_date
+                  .contactName
+                    = absentcontact.user.child_name
+                  .contactKind
+                    - if absentcontact.kind == "absent"
+                      欠席
+                    - elsif absentcontact.kind == "latein"
+                      遅刻
+                    - else
+                      早退
+                  .contactReason 
+                    = absentcontact.reason
+                  .contactConfirm
+                    連絡済
+                  .contact_T_Confirm
+                    先生未確認
           .infoArea__AbsentContact__contactsHistory__title
             送信履歴
           .infoArea__AbsentContact__contactsHistory__index
-            - @absent_contacts_for_parent.each do |a|
-              .contactHistoryBox
-                .contact
-                  =a.set_date
-                .contact
+            - @absent_contacts_for_parent.each do |absentcontact|
+              .AbsentContactBox
+                .contactDate
+                  =absentcontact.set_date
+                .contactName
                   = current_user.child_name
-                .contact
-                  - if a.kind == "absent"
+                .contactKind
+                  - if absentcontact.kind == "absent"
                     欠席
-                  - elsif a.kind == "latein"
+                  - elsif absentcontact.kind == "latein"
                     遅刻
                   - else
                     早退
-                .contact
+                .contactReason 
+                  = absentcontact.reason
+                .contactConfirm
                   連絡済
-                .contact
+                .contact_T_Confirm
                   先生未確認
