--- a/app/views/contact_books/index.html.haml
+++ b/app/views/contact_books/index.html.haml
@@ -2,4 +2,4 @@
 
 .wrapper
  = render 'contact_books/side-bar'
- = render 'contact_books/info-area'
+ = render 'contact_books/contactBook_contents_index'
