small revise done

--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -164,7 +164,7 @@ footer {
           font-size: 6px;
         }
         &__roomName {
-          font-size: 20px;
+          line-height: 80px;
           font-weight: bolder;
           line-height: 60px;
           text-align: center;
