--- a/app/views/rooms/_room_contents_index.html.haml
+++ b/app/views/rooms/_room_contents_index.html.haml
@@ -5,11 +5,7 @@
       .infoArea__infoHead__userRoom__roomName
         未選択
     .infoArea__infoHead__headBox
-      %ul.headBtns
-        サイドバーからクラスを選んでください。
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        クラス選択
-      %li
-        %i.fa.fa-chevron-right
+        サイドバーからクラスを選んでください
