--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -83,13 +83,13 @@
             .InputBox
               .absentAt
                 日付：
-                = f.date_field :absent_at, placeholder: "いつ", class: "inputAbsentAT"
+                = f.date_field :absent_at, class: "inputAbsentAT"
               .absentKind
                 種類：
                 = f.select :kind, AbsentContact.kinds_i18n.invert, {}, class: "inputKind"
               .absentReason
                 理由・連絡：
-                = f.text_area :reason, placeholder: "理由,連絡", class: "inputReason"
+                = f.text_area :reason, class: "inputReason"
               .afterContact
                 放課後担任から連絡が
                 = f.select :after_contact, AbsentContact.after_contacts_i18n.invert, {}, class: "inputAfterContact"
