function of cntact_book revised: notice message, under making made

--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -229,6 +229,11 @@ footer {
         &__TodayContactBook {
           display: flex;
           justify-content: center;
+          .makingMessage {
+            font-size: 40px;
+            padding: 50px 0;
+            margin-bottom: 20px;
+          }
           .todayCb {
             padding: 50px 0;
             margin-bottom: 20px;
