--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -28,8 +28,8 @@
       .infoArea__infoContent__todayContactBook__todayContactBookTitle
         本日の連絡帳
       .infoArea__infoContent__todayContactBook__TodayContactBook
-        - if @today_contact_book == nil
-          まだ、連絡帳はありません。
+        - if !@today_contact_book.present?
+          .makingMessage ただいま作成中です
         - else
           - @today_contact_book.each do |t|
             .todayCb
@@ -39,11 +39,12 @@
       過去の連絡帳      
     .infoArea__infoContent__historyContactBookBox
       -@everymonth.each do |month|
-        .infoArea__infoContent__historyContactBookBox__title
-          = month[0]
-        .infoArea__infoContent__historyContactBookBox__Index
-          %ul.cbs
-            -month[1].each do |m|
-              %li.cb
-                = link_to room_contact_book_path(@room, m),class: "cbLink" do
-                  = m.set_date
+        - if month[1].present?
+          .infoArea__infoContent__historyContactBookBox__title
+            = month[0]
+          .infoArea__infoContent__historyContactBookBox__Index
+            %ul.cbs
+              -month[1].each do |m|
+                %li.cb
+                  = link_to room_contact_book_path(@room, m),class: "cbLink" do
+                    = m.set_date
