--- a/app/views/letters/_letter_contents.html.haml
+++ b/app/views/letters/_letter_contents.html.haml
@@ -35,6 +35,7 @@
       - @letters.each do |le|
         .Letter
           = link_to image_url("#{le.pdf}"), class: "letterFile" do
+            %i.fa.fa-file-pdf
             = le.name
           配布日：
           = le.set_date
