--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -229,7 +229,13 @@ footer {
         &__TodayContactBook {
           display: flex;
           justify-content: center;
+          .fa.fa-hammer {
+            font-size: 40px;
+            padding: 55px 0;
+            margin: 0 20px;
+          }
           .makingMessage {
+            display: inline;
             font-size: 40px;
             padding: 50px 0;
             margin-bottom: 20px;
