--- a/app/views/letters/_letter_contents.html.haml
+++ b/app/views/letters/_letter_contents.html.haml
@@ -39,3 +39,6 @@
             = le.name
           配布日：
           = le.set_date
+          - if current_user && current_user.admin?
+            = link_to new_room_letter_path(@room), method: :get, class: "DeleteBtn" do
+              %i.fas.fa-trash-alt
