--- a/app/assets/stylesheets/modules/_letters.scss
+++ b/app/assets/stylesheets/modules/_letters.scss
@@ -58,6 +58,15 @@
       .letterFile:hover {
         text-decoration: underline;
       }
+      .DeleteBtn {
+        font-size: 20px;
+        color: black;
+        text-decoration: none;
+        margin-left: 20px;
+      }
+      .DeleteBtn:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
