--- a/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
@@ -11,3 +11,6 @@
     送信
   .contact_T_ConfirmHead
     先生確認
+  - if current_user && !current_user.admin?
+    .contact_edit_delete_btnHead
+      編集・削除
