delete button on letter_index implemented

--- a/app/assets/stylesheets/modules/_letters.scss
+++ b/app/assets/stylesheets/modules/_letters.scss
@@ -58,6 +58,10 @@
       .letterFile:hover {
         text-decoration: underline;
       }
+      .releasedAtBox {
+        display: inline-block;
+        width: 100px;
+      }
       .DeleteBtn {
         font-size: 20px;
         color: black;
