update action on contact_books_controller implemented

--- a/app/views/contact_books/edit.html.haml
+++ b/app/views/contact_books/edit.html.haml
@@ -2,7 +2,7 @@
   .Wall
     .CotactBookField
       %p.head "連絡帳編集フォーム"
-      =form_with model: [@room, @contact_book], method: :post, local: true do |f|
+      =form_with model: [@room, @contact_book], local: true do |f|
         .FormField
           .FormField__labelDate
             = f.label :"日付", class: "Date"
