--- a/app/views/absent_contacts/_AbsentContactBox.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBox.html.haml
@@ -12,6 +12,8 @@
       早退
   .contactReason 
     = absentcontact.reason
+  .contactAfterContact
+    = absentcontact.after_contact
   .contactConfirm
     済
   .contact_T_Confirm
