--- a/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
@@ -7,6 +7,8 @@
     種類
   .contactReasonHead
     理由
+  .contactAfterContactHead
+    放課後連絡
   .contactConfirmHead
     送信
   .contact_T_ConfirmHead
