--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -42,10 +42,16 @@
             - @today_absent_contact_for_teacher.each do |absentcontact|
               =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
         .infoArea__AbsentContact__contactsHistory__title
+          今日以降の連絡
+        .infoArea__AbsentContact__contactsHistory__index
+          = render 'absent_contacts/AbsentContactBoxTable'
+          - @future_absent_contacts_for_teacher.each do |absentcontact|
+            =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
+        .infoArea__AbsentContact__contactsHistory__title
           受信履歴
         .infoArea__AbsentContact__contactsHistory__index
           = render 'absent_contacts/AbsentContactBoxTable'
-          - @absent_contacts_for_teacher.each do |absentcontact|
+          - @past_absent_contacts_for_teacher.each do |absentcontact|
             =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
   - else
     .infoArea__AbsentContact
@@ -80,9 +86,15 @@
               - @today_absent_contact_for_parent.each do |absentcontact|
                 =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
           .infoArea__AbsentContact__contactsHistory__title
+            欠席等の予定
+          .infoArea__AbsentContact__contactsHistory__index
+            = render 'absent_contacts/AbsentContactBoxTable'
+            - @future_absent_contacts_for_parent.each do |absentcontact|
+              =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
+          .infoArea__AbsentContact__contactsHistory__title
             送信履歴
           .infoArea__AbsentContact__contactsHistory__index
             = render 'absent_contacts/AbsentContactBoxTable'
-            - @absent_contacts_for_parent.each do |absentcontact|
+            - @past_absent_contacts_for_parent.each do |absentcontact|
               =render partial: 'AbsentContactBox', locals: { absentcontact: absentcontact }
 
